--- a/verilog/PC_summary.html
+++ b/verilog/PC_summary.html
@@ -25,26 +25,26 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\_xmsgs/*.xmsgs?&DataKey=Warning'>35 Warnings (35 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\_xmsgs/*.xmsgs?&DataKey=Warning'>35 Warnings (35 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC_envsettings.html'>
+<A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -83,7 +83,7 @@ System Settings</A>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>33</TD>
 <TD ALIGN=RIGHT>210</TD>
 <TD ALIGN=RIGHT>15%</TD>
@@ -315,18 +315,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -337,10 +337,10 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Jun 24 10:23:10 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Jun 24 10:23:20 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Jun 24 10:23:40 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\_xmsgs/map.xmsgs?&DataKey=Warning'>35 Warnings (35 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\_xmsgs/map.xmsgs?&DataKey=Info'>5 Infos (5 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\PC.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Jun 24 10:23:57 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (2 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Jun 24 22:14:01 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Jun 24 22:14:01 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Jun 24 22:14:01 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\_xmsgs/map.xmsgs?&DataKey=Warning'>35 Warnings (35 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\_xmsgs/map.xmsgs?&DataKey=Info'>5 Infos (5 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\PC.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Jun 24 22:14:01 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (2 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Post-PAR Static Timing Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Bitgen Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -348,8 +348,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Jun 24 22:14:01 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/24/2021 - 21:24:58</center>
+<br><center><b>Date Generated:</b> 06/24/2021 - 22:15:41</center>
 </BODY></HTML>
