--- a/verilog/PC_summary.html
+++ b/verilog/PC_summary.html
@@ -348,8 +348,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Jun 24 21:32:29 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/24/2021 - 21:24:58</center>
+<br><center><b>Date Generated:</b> 06/24/2021 - 22:31:02</center>
 </BODY></HTML>
