--- a/verilog/CONTROL_summary.html
+++ b/verilog/CONTROL_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>PC Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>CONTROL Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>group_k.xise</TD>
@@ -72,9 +72,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project/group_k\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Jun 24 21:32:29 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Farid/Desktop/Group-K/verilog\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Jun 24 23:00:37 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/24/2021 - 22:31:03</center>
+<br><center><b>Date Generated:</b> 06/24/2021 - 23:09:26</center>
 </BODY></HTML>
