--- a/verilog/CONTROL_summary.html
+++ b/verilog/CONTROL_summary.html
@@ -72,9 +72,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Jun 24 23:18:21 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Farid/Desktop/GroupK/verilog\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Jun 24 23:33:05 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/24/2021 - 23:27:53</center>
+<br><center><b>Date Generated:</b> 06/24/2021 - 23:36:23</center>
 </BODY></HTML>
