--- a/verilog/CONTROL_summary.html
+++ b/verilog/CONTROL_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>CONTROL Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>CONTROL Project Status (06/27/2021 - 04:12:30)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>group_k.xise</TD>
@@ -13,19 +13,18 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>CONTROL</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Mapped</TD>
+<TD>Mapped (Failed)</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc7a100t-3csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\_xmsgs/*.xmsgs?&DataKey=Warning'>25 Warnings (25 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -369,10 +368,11 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\CONTROL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Jun 27 01:57:24 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\_xmsgs/xst.xmsgs?&DataKey=Warning'>9 Warnings (9 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\CONTROL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Jun 27 01:57:33 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\CONTROL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Jun 27 01:58:02 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\_xmsgs/map.xmsgs?&DataKey=Warning'>16 Warnings (16 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\_xmsgs/map.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\CONTROL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Jun 27 01:57:24 2021</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\CONTROL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Jun 27 01:57:33 2021</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\CONTROL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Jun 27 01:58:02 2021</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD>CPLD Fitter Report (Text)</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Post-PAR Static Timing Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Bitgen Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -380,9 +380,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Jun 27 02:11:00 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/UI/CA/verilog/project2/Group-K/verilog\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Jun 27 02:11:00 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/27/2021 - 02:34:17</center>
+<br><center><b>Date Generated:</b> 06/27/2021 - 04:12:30</center>
 </BODY></HTML>
