--- a/verilog/DARTH_VADER_envsettings.html
+++ b/verilog/DARTH_VADER_envsettings.html
@@ -16,49 +16,49 @@
 <tr>
 <td>PATHEXT</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>Path</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files\Common Files\Oracle\Java\javapath;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\Intel\WiFi\bin\;<br>C:\Program Files\Common Files\Intel\WirelessCommon\;<br>C:\Program Files\dotnet\;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\170\Tools\Binn\;<br>C:\Program Files\NVIDIA Corporation\NVIDIA NvDLISR;<br>C:\Strawberry\c\bin;<br>C:\Strawberry\perl\site\bin;<br>C:\Strawberry\perl\bin;<br>C:\MinGW\bin;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\CMake\bin;<br>C:\Users\rrast\AppData\Local\Programs\Python\Python37-32\Scripts\;<br>C:\Users\rrast\AppData\Local\Programs\Python\Python37-32\;<br>C:\Users\rrast\AppData\Local\Microsoft\WindowsApps;<br>C:\Program Files\JetBrains\IntelliJ IDEA Community Edition 2020.2.2\bin;<br>C:\Program Files\JetBrains\PyCharm Community Edition 2020.3.5\bin;<br>C:\Users\rrast\AppData\Local\atom\bin;<br>C:\Users\rrast\AppData\Local\Programs\Microsoft VS Code\bin</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files\Common Files\Oracle\Java\javapath;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\Intel\WiFi\bin\;<br>C:\Program Files\Common Files\Intel\WirelessCommon\;<br>C:\Program Files\dotnet\;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\170\Tools\Binn\;<br>C:\Program Files\NVIDIA Corporation\NVIDIA NvDLISR;<br>C:\Strawberry\c\bin;<br>C:\Strawberry\perl\site\bin;<br>C:\Strawberry\perl\bin;<br>C:\MinGW\bin;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\CMake\bin;<br>C:\Users\rrast\AppData\Local\Programs\Python\Python37-32\Scripts\;<br>C:\Users\rrast\AppData\Local\Programs\Python\Python37-32\;<br>C:\Users\rrast\AppData\Local\Microsoft\WindowsApps;<br>C:\Program Files\JetBrains\IntelliJ IDEA Community Edition 2020.2.2\bin;<br>C:\Program Files\JetBrains\PyCharm Community Edition 2020.3.5\bin;<br>C:\Users\rrast\AppData\Local\atom\bin;<br>C:\Users\rrast\AppData\Local\Programs\Microsoft VS Code\bin</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINXD_LICENSE_FILE</td>
 <td>E:\UI\CA\Xilinx.ISE.Design.Suite.v14.7.www.Download.ir\Xilinx.ISE.Design.Suite.v14.7\Crack\xilinx_ise.lic</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>E:\UI\CA\Xilinx.ISE.Design.Suite.v14.7.www.Download.ir\Xilinx.ISE.Design.Suite.v14.7\Crack\xilinx_ise.lic</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
 <td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
@@ -77,13 +77,13 @@
 <tr>
 <td>-ifn</td>
 <td>&nbsp;</td>
-<td>CONTROL.prj</td>
+<td>DARTH_VADER.prj</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
 <td>-ofn</td>
 <td>&nbsp;</td>
-<td>CONTROL</td>
+<td>DARTH_VADER</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -101,7 +101,7 @@
 <tr>
 <td>-top</td>
 <td>&nbsp;</td>
-<td>CONTROL</td>
+<td>DARTH_VADER</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -351,6 +351,36 @@
 <td>0</td>
 </tr>
 </TABLE>
+<A NAME="Translation Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Translation Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-dd</td>
+<td>&nbsp;</td>
+<td>_ngo</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xc7a100t-csg324-3</td>
+<td>None</td>
+</tr>
+</TABLE>
 <A NAME="Operating System Information"></A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
@@ -366,28 +396,28 @@
 <tr>
 <td>CPU Architecture/Speed</td>
 <td>Intel(R) Core(TM) i7-8565U CPU @ 1.80GHz/1992 MHz</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>Intel(R) Core(TM) i7-8565U CPU @ 1.80GHz/1992 MHz</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>Host</td>
 <td>Sulyvahn</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>Sulyvahn</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Microsoft , 64-bit</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>Microsoft , 64-bit</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>major release  (build 9200)</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>major release  (build 9200)</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
